--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</head>
 	<body>
 		<div class="main__container">
-			<div class="wrapper">
+			<div class="wrapper__hero">
 				<section class="hero">
 					<div class="hero__header">
 						<div class="hero__header-left">
@@ -132,28 +132,65 @@
 				</section>
 				<!-- End hero section-->
 			</div>
-			<!-- END WRAPPER -->
+			<!-- END HERO WRAPPER -->
+			<div class="wrapper__future">
+				<section class="future">
+					<div class="future__heading h2">Designed for the future</div>
+					<div class="2-col future__body">
+						<div class="col-left">
+							<div class="title">
+								<p class="h5">Introducing an extensible editor</p>
+							</div>
+							<div class="desc">
+								<p class="lead">
+									Blogr features an exceedingly intuitive interface which lets
+									you focus on one thing: creating content. The editor supports
+									management of multiple blogs and allows easy manipulation of
+									embeds such as images, videos, and Markdown. Extensibility
+									with plugins and themes provide easy ways to add functionality
+									or change the looks of a blog
+								</p>
+							</div>
+							<div class="title">
+								<p class="h5">Robust</p>
+							</div>
+							<div class="desc">
+								<p class="lead">
+									Flexible content management enables users to easily move
+									through posts. Increase the usability of your blog by adding
+									customized categories, sections, format, or flow. With this
+									functionality, you’re in full control.
+								</p>
+							</div>
+						</div>
+						<div class="col-right">
+							<img src="./app/images/illustration-editor-desktop.svg" alt="" />
+						</div>
+					</div>
+				</section>
+			</div>
+			<!-- END FUTURE WRAPPER -->
+			<div class="wrapper__middle">
+				<section class="middle">
+					<div class="middle__img">
+						<img src="./app/images/illustration-phones.svg" alt="" />
+					</div>
+					<div class="middle__desc">
+						<div class="h5">State of the Art Infrastructure</div>
+						<div class="lead">
+							With reliability and speed in mind, worldwide data centers provide
+							the backbone for ultra-fast connectivity. This ensures your site
+							will load instantly, no matter where your readers are, keeping
+							your site competitive.
+						</div>
+					</div>
+				</section>
+			</div>
 		</div>
 
 		<!--
 
-			Login Sign Up
-
-			A modern
-		publishing platform Grow your audience and build your online brand Start for
-		Free Learn More Designed for the future Introducing an extensible editor
-		Blogr features an exceedingly intuitive interface which lets you focus on
-		one thing: creating content. The editor supports management of multiple
-		blogs and allows easy manipulation of embeds such as images, videos, and
-		Markdown. Extensibility with plugins and themes provide easy ways to add
-		functionality or change the looks of a blog. Robust content management
-		Flexible content management enables users to easily move through posts.
-		Increase the usability of your blog by adding customized categories,
-		sections, format, or flow. With this functionality, you’re in full control.
-		State of the Art Infrastructure With reliability and speed in mind,
-		worldwide data centers provide the backbone for ultra-fast connectivity.
-		This ensures your site will load instantly, no matter where your readers
-		are, keeping your site competitive. Free, open, simple Blogr is a free and
+			 Free, open, simple Blogr is a free and
 		open source application backed by a large community of helpful developers.
 		It supports features such as code syntax highlighting, RSS feeds, social
 		media integration, third-party commenting tools, and works seamlessly with
