--- a/index.html
+++ b/index.html
@@ -20,193 +20,281 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="./app/stylesheets/styles.css" />
-
-		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-		<style>
-			.attribution {
-				font-size: 11px;
-				text-align: center;
-			}
-			.attribution a {
-				color: hsl(228, 45%, 44%);
-			}
-		</style>
 	</head>
 	<body>
-		<div class="main__container">
-			<div class="wrapper__hero">
-				<section class="hero">
-					<div class="hero__header">
-						<div class="hero__header-left">
-							<div class="hero__header-logo">
-								<a href="#" class="navbar-brand"
-									><img src="./app/images/logo.svg" alt=""
-								/></a>
-							</div>
-							<div class="hero__header-nav">
-								<li class="nav-item dropdown">
-									<a
-										class="nav-link dropdown-toggle"
-										href="#"
-										id="navbarDropdown"
-										role="button"
-										data-toggle="dropdown"
-										aria-haspopup="true"
-										aria-expanded="false"
-									>
-										Product
-									</a>
-									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" href="#">Overview</a>
-										<a class="dropdown-item" href="#">Pricing</a>
-										<a class="dropdown-item" href="#">Marketplace</a>
-										<a class="dropdown-item" href="#">Features</a>
-										<a class="dropdown-item" href="#">Integrations</a>
-									</div>
-								</li>
-								<li class="nav-item dropdown">
-									<a
-										class="nav-link dropdown-toggle"
-										href="#"
-										id="navbarDropdown"
-										role="button"
-										data-toggle="dropdown"
-										aria-haspopup="true"
-										aria-expanded="false"
-									>
-										Company
-									</a>
-									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" href="#">About</a>
-										<a class="dropdown-item" href="#">Team</a>
-										<a class="dropdown-item" href="#">Blog</a>
-										<a class="dropdown-item" href="#">Careers</a>
-									</div>
-								</li>
-								<li class="nav-item dropdown">
-									<a
-										class="nav-link dropdown-toggle"
-										href="#"
-										id="navbarDropdown"
-										role="button"
-										data-toggle="dropdown"
-										aria-haspopup="true"
-										aria-expanded="false"
-									>
-										Connect
-									</a>
-									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" href="#">Contact</a>
-										<a class="dropdown-item" href="#">Newsletter</a>
-										<a class="dropdown-item" href="#">LinkedIn</a>
-									</div>
-								</li>
-							</div>
-						</div>
-						<div class="hero__header-right">
-							<!-- <div class="dropdown-divider"></div> -->
-							<div class="hero__header-login">
-								<a class="login" type="submit">Login</a>
-							</div>
-							<div class="hero__header-signup">
-								<button class="btn" type="submit">Sign Up</button>
-							</div>
-						</div>
-					</div>
-					<div class="hero__hero">
-						<div class="jumbotron">
-							<h1 class="display-4">A modern publishing platform</h1>
-							<p class="lead">Grow your audience and build your online brand</p>
-							<div class="jumbotron__button-group">
-								<div class="jumbotron__free">
-									<button class="btn free" type="submit">Start for Free</button>
+		<div class="wrapper">
+			<header class="header">
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<a class="navbar-brand" href="#">
+						<img src="./app/images/logo.svg" alt="" />
+					</a>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-toggle="collapse"
+						data-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					Hard code hamburger menu
+					<div
+						class="navbar-cta collapse navbar-collapse"
+						id="navbarSupportedContent"
+					>
+						<ul class="navbar-nav mr-auto">
+							<li class="nav-item dropdown">
+								<a
+									class="nav-link dropdown-toggle"
+									href="#"
+									id="navbarDropdown"
+									role="button"
+									data-toggle="dropdown"
+									aria-haspopup="true"
+									aria-expanded="false"
+								>
+									Product
+								</a>
+								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item" href="#">Overview</a>
+									<a class="dropdown-item" href="#">Pricing</a>
+									<a class="dropdown-item" href="#">Marketplace</a>
+									<a class="dropdown-item" href="#">Features</a>
+									<a class="dropdown-item" href="#">Integrations</a>
 								</div>
-								<div class="jumbotron__learn">
-									<button class="btn btn-outline-light learn" type="submit">
-										Learn More
-									</button>
+							</li>
+							<li class="nav-item dropdown">
+								<a
+									class="nav-link dropdown-toggle"
+									href="#"
+									id="navbarDropdown"
+									role="button"
+									data-toggle="dropdown"
+									aria-haspopup="true"
+									aria-expanded="false"
+								>
+									Company
+								</a>
+								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item" href="#">About</a>
+									<a class="dropdown-item" href="#">Team</a>
+									<a class="dropdown-item" href="#">Blog</a>
+									<a class="dropdown-item" href="#">Careers</a>
 								</div>
-							</div>
-						</div>
+							</li>
+							<li class="nav-item dropdown">
+								<a
+									class="nav-link dropdown-toggle"
+									href="#"
+									id="navbarDropdown"
+									role="button"
+									data-toggle="dropdown"
+									aria-haspopup="true"
+									aria-expanded="false"
+								>
+									Connect
+								</a>
+								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item" href="#">Contact</a>
+									<a class="dropdown-item" href="#">Newsletter</a>
+									<a class="dropdown-item" href="#">LinkedIn</a>
+								</div>
+							</li>
+						</ul>
+						<form class="form-inline my-2 my-lg-0">
+							<button
+								class="btn header-cta-btn my-2 my-sm-0 login"
+								type="submit"
+							>
+								Login
+							</button>
+							<button
+								class="btn header-cta-btn my-2 my-sm-0 signup"
+								type="submit"
+							>
+								Sign Up
+							</button>
+						</form>
 					</div>
-				</section>
-				<!-- End hero section-->
-			</div>
-			<!-- END HERO WRAPPER -->
-			<div class="wrapper__future">
-				<section class="future">
-					<div class="future__heading h2">Designed for the future</div>
-					<div class="2-col future__body">
-						<div class="col-left">
-							<div class="title">
-								<p class="h5">Introducing an extensible editor</p>
-							</div>
-							<div class="desc">
-								<p class="lead">
-									Blogr features an exceedingly intuitive interface which lets
-									you focus on one thing: creating content. The editor supports
-									management of multiple blogs and allows easy manipulation of
-									embeds such as images, videos, and Markdown. Extensibility
-									with plugins and themes provide easy ways to add functionality
-									or change the looks of a blog
-								</p>
-							</div>
-							<div class="title">
-								<p class="h5">Robust</p>
-							</div>
-							<div class="desc">
-								<p class="lead">
-									Flexible content management enables users to easily move
-									through posts. Increase the usability of your blog by adding
-									customized categories, sections, format, or flow. With this
-									functionality, you’re in full control.
-								</p>
-							</div>
-						</div>
-						<div class="col-right">
-							<img src="./app/images/illustration-editor-desktop.svg" alt="" />
-						</div>
+				</nav>
+			</header>
+
+			<div class="jumbotron">
+				<h1 class="display-4">A modern publishing platform</h1>
+				<p class="lead">Grow your audience and build your online brand</p>
+				<div class="jumbotron__button-group">
+					<div class="jumbotron__free">
+						<button class="btn free" type="submit">Start for Free</button>
 					</div>
-				</section>
-			</div>
-			<!-- END FUTURE WRAPPER -->
-			<div class="wrapper__middle">
-				<section class="middle">
-					<div class="middle__img">
-						<img src="./app/images/illustration-phones.svg" alt="" />
+					<div class="jumbotron__learn">
+						<button class="btn btn-outline-light learn" type="submit">
+							Learn More
+						</button>
 					</div>
-					<div class="middle__desc">
-						<div class="h5">State of the Art Infrastructure</div>
-						<div class="lead">
-							With reliability and speed in mind, worldwide data centers provide
-							the backbone for ultra-fast connectivity. This ensures your site
-							will load instantly, no matter where your readers are, keeping
-							your site competitive.
-						</div>
-					</div>
-				</section>
+				</div>
 			</div>
 		</div>
+		<!-- END HERO & HEADER -->
 
-		<!--
-
-			 Free, open, simple Blogr is a free and
-		open source application backed by a large community of helpful developers.
-		It supports features such as code syntax highlighting, RSS feeds, social
-		media integration, third-party commenting tools, and works seamlessly with
-		Google Analytics. The architecture is clean and is relatively easy to learn.
-		Powerful tooling Batteries included. We built a simple and straightforward
-		CLI tool that makes customization and deployment a breeze, but capable of
-		producing even the most complicated sites. Product Overview Pricing
-		Marketplace Features Integrations Company About Team Blog Careers Connect
-		Contact Newsletter LinkedIn -->
-
-		<div class="attribution">
-			Challenge by
-			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-				>Frontend Mentor</a
-			>. Coded by <a href="#">Your Name Here</a>.
+		<div class="wrapper__future">
+			<section class="future">
+				<div class="future__heading h2">Designed for the future</div>
+				<div class="2-col future__body">
+					<div class="col-left">
+						<div class="title">
+							<p class="h5">Introducing an extensible editor</p>
+						</div>
+						<div class="desc">
+							<p class="lead">
+								Blogr features an exceedingly intuitive interface which lets you
+								focus on one thing: creating content. The editor supports
+								management of multiple blogs and allows easy manipulation of
+								embeds such as images, videos, and Markdown. Extensibility with
+								plugins and themes provide easy ways to add functionality or
+								change the looks of a blog
+							</p>
+						</div>
+						<div class="title">
+							<p class="h5">Robust</p>
+						</div>
+						<div class="desc">
+							<p class="lead">
+								Flexible content management enables users to easily move through
+								posts. Increase the usability of your blog by adding customized
+								categories, sections, format, or flow. With this functionality,
+								you’re in full control.
+							</p>
+						</div>
+					</div>
+					<div class="col-right">
+						<img src="./app/images/illustration-editor-desktop.svg" alt="" />
+					</div>
+				</div>
+			</section>
 		</div>
+
+		<!-- END FUTURE WRAPPER -->
+
+		<div class="wrapper__middle">
+			<section class="middle">
+				<div class="middle__img">
+					<img src="./app/images/illustration-phones.svg" alt="" />
+				</div>
+				<div class="middle__desc">
+					<div class="h5">State of the Art Infrastructure</div>
+					<div class="lead">
+						With reliability and speed in mind, worldwide data centers provide
+						the backbone for ultra-fast connectivity. This ensures your site
+						will load instantly, no matter where your readers are, keeping your
+						site competitive.
+					</div>
+				</div>
+			</section>
+		</div>
+		<!-- END MIDDLE WRAPPER -->
+
+		<div class="wrapper__second-middle">
+			<div class="wrapper">
+				<div class="wrapper__col-left">
+					<img src="./app/images/illustration-laptop-desktop.svg" alt="" />
+				</div>
+				<div class="wrapper__col-right">
+					<div class="col-right-text">
+						<div class="title">
+							<p class="h5">Free, open, simple</p>
+						</div>
+						<div class="desc">
+							<p class="lead">
+								Blogr is a free and open source application backed by a large
+								community of helpful developers. It supports features such as
+								code syntax highlighting, RSS feeds, social media integration,
+								third-party commenting tools, and works seamlessly with Google
+								Analytics. The architecture is clean and is relatively easy to
+								learn.
+							</p>
+						</div>
+
+						<div class="title">
+							<p class="h5">Powerful tooling</p>
+						</div>
+						<div class="desc">
+							<p class="lead">
+								Powerful tooling Batteries included. We built a simple and
+								straightforward CLI tool that makes customization and deployment
+								a breeze, but capable of producing even the most complicated
+								site
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- END SECOND MIDDLE SECTION -->
+
+		<footer class="footer">
+			<div class="footer__logo">
+				<a href="#"><img src="./app/images/logo.svg" alt="" class="logo" /></a>
+			</div>
+			<div class="footer__col">
+				<ul class="nav">
+					<li class="nav-item">
+						<a class="nav-item-header" href="#">Products</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Overview</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Pricing</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Marketplace</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Features</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Integrations</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer__col">
+				<ul class="nav">
+					<li class="nav-item">
+						<a class="nav-item-header" href="#">Company</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Team</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Blog</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Careers</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer__col">
+				<ul class="nav">
+					<li class="nav-item">
+						<a class="nav-item-header" href="#">Connet</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Newsletter</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Linkedin</a>
+					</li>
+				</ul>
+			</div>
+		</footer>
 
 		<script
 			src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
